--- a/FaceBot/FaceBot/packages.config
+++ b/FaceBot/FaceBot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.38.0.1" targetFramework="net461" />
