--- a/FaceBot/FaceBot/App.config
+++ b/FaceBot/FaceBot/App.config
@@ -4,11 +4,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <appSettings>
-    <add key="facebookPost" value="https://m.facebook.com/sotrackboa/videos/1892014844150716/?hc_ref=ARR1IUZXQk1khbqbtjYrFZWYqE7-LqxfvND6O9Jpq1uYpUx3BsufwriwH_kY5yH8pMo"/>
-    <add key="facebookPostNewLayout" value="https://www.facebook.com/sotrackboa/videos/1892014844150716/?hc_ref=ARR1IUZXQk1khbqbtjYrFZWYqE7-LqxfvND6O9Jpq1uYpUx3BsufwriwH_kY5yH8pMo"/>
+    <add key="facebookPost" value="https://m.facebook.com/eletrovibez/photos/a.1370888883029154.1073741829.473907042727347/1632700263514680/?type=3"/>
     <add key="facebookLogin" value="https://www.facebook.com/login.php"/>
     <add key="login" value=""/>
     <add key="senha" value=""/>
     <add key="connectionString" value="Server=(LocalDb)\MSSQLLocalDB;Initial Catalog=FACEBOT;Integrated Security=true;"/>
+    <add key="profileName" value="Gabriel Melo"/>
   </appSettings>
 </configuration>
